Refactored Pair to GuardGroup to hold arbitrary amount of guards